# meteofr

./: LICENSE.txt  README.md  pyproject.toml
$HOME/.meteofr/: ref.csv
data/: df_res_.csv  meta_01014001.json  meta_06029001.json  meta_44009001.json  meta_44020001.json  meta_44070001.json  meta_44109003.json  meta_44109012.json
src/meteofr/: __about__.py  get_data.py
tests/: __init__.py  test_get_weather.py  test_pip_install.py
