[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meteofr"
dynamic = ["version"]
description = 'Access Meteo France API to fetch weather data.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Camille Bonamy", email = "44895259+goodfr@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Camille Bonamy/meteofr#readme"
Issues = "https://github.com/Camille Bonamy/meteofr/issues"
Source = "https://github.com/Camille Bonamy/meteofr"

[tool.hatch.version]
path = "src/meteofr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/meteofr tests}"

[tool.coverage.run]
source_pkgs = ["meteofr", "tests"]
branch = true
parallel = true
omit = [
  "src/meteofr/__about__.py",
]

[tool.coverage.paths]
meteofr = ["src/meteofr", "*/meteofr/src/meteofr"]
tests = ["tests", "*/meteofr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
